--- a/index.html
+++ b/index.html
@@ -9,94 +9,19 @@
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <div id="header_container">
-            <p id="header_title">Brandon Phillips</p>
-        </div>
-        <div id="edu_container">
+    <div class="container">
+        <div class="title">Brandon Phillips Portfolio</div>
+        <div class="edu_container">
 
-            <div>
-                <p id="edu_title">Education</p>
-            </div>
+            <div class="edu_title">Education</div>
 
-            <div id="edu_content">
-
-                <ul id="edu_courseList">
-
-                    <li class="edu_course">
-                        <a class="edu_link" href="/sdev2730">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2730</p>
-                                    <p>Mobile Development</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="edu_course">
-                        <a class="edu_link" href="./SDEV2110/SDEV2110.html">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2110</p>
-                                    <p>JavaScript Programming I</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-
-                    <!-- for testing -->
-                    <li class="edu_course">
-                        <a class="edu_link" href="/sdev2730">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2730</p>
-                                    <p>Mobile Development</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="edu_course">
-                        <a class="edu_link" href="/sdev2110">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2110</p>
-                                    <p>JavaScript Programming I</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    
-                    <li class="edu_course">
-                        <a class="edu_link" href="/sdev2730">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2730</p>
-                                    <p>Mobile Development</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li class="edu_course">
-                        <a class="edu_link" href="/sdev2110">
-                            <div class="course_container">
-                                <div class="course_title">
-                                    <p>SDEV2110</p>
-                                    <p>JavaScript Programming I</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                </ul>
-
+            <div class="course">
+                <a href="./SDEV2110/SDEV2110.html">
+                    SDEV 2110 JavaScript Programming I
+                </a>
             </div>
         </div>
-    </main>
+    </div>
     <footer></footer>
 
 </body>
