--- a/SDEV2110/2110_final_project/index.html
+++ b/SDEV2110/2110_final_project/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <a href="../SDEV2110.html">Back</a>
         <h1>Brandon Phillips</h1>
         <h1>Shall We Play a Game?</h1>
         <div class="tabs">
