--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -10,19 +10,19 @@
 
 <body>
     <div class="container">
-        <div class="title_container">
+        <div class="title">
             <p>SDEV 2110 JavaScript Programming I</p>
-            <a href="../index.html">Home</a>
+            <div>Davis Technical College</div>
+            <a href="../index.html">Back</a>
         </div>
-        <div class="desc_container">
+        <div class="description">
             <p>This JavaScript course exposes students to the modern JavaScript language and the Document Object Model
                 (DOM) of web pages. During the course, you will create functional web pages incorporating JavaScript to
                 make them interactive and dynamic.</p>
         </div>
-        <div class="projects_container">
-            <div>
-                <a href="./2110_final_project/index.html">Final Project</a>
-            </div>
+        <div class="projects">
+            <p>Projects</p>
+            <a href="./2110_final_project/index.html">Final Project</a>
         </div>
     </div>
 </body>
