added tabbed content project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="title">Brandon Phillips Portfolio</div>
+        <h1 class="title">Brandon Phillips Portfolio</h1>
         <div class="edu_container">
 
             <div class="edu_title">Education</div>
