--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -11,18 +11,19 @@
 <body>
     <div class="container">
         <div class="title">
-            <p>SDEV 2110 JavaScript Programming I</p>
-            <div>Davis Technical College</div>
             <a href="../index.html">Back</a>
+            <h1>SDEV 2110 JavaScript Programming I</h1>
         </div>
         <div class="description">
-            <p>This JavaScript course exposes students to the modern JavaScript language and the Document Object Model
+            <p>School: Davis Technical College</p>
+            <p>Course Description: This JavaScript course exposes students to the modern JavaScript language and the Document Object Model
                 (DOM) of web pages. During the course, you will create functional web pages incorporating JavaScript to
                 make them interactive and dynamic.</p>
         </div>
         <div class="projects">
             <p>Projects</p>
-            <a href="./2110_final_project/index.html">Final Project</a>
+            <a href="./final_project/index.html">Final Project</a>
+            <a href="./tabbed_content/index.html">Tabbed Content</a>
         </div>
     </div>
 </body>
