add time clock calendar

--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -24,6 +24,7 @@
             <p>Projects</p>
             <a href="./final_project/index.html">Final Project</a>
             <a href="./tabbed_content/index.html">Tabbed Content</a>
+            <a href="./time_clock_calendar/index.html">Time Clock Calendar</a>
         </div>
     </div>
 </body>
