--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -22,9 +22,12 @@
         </div>
         <div class="projects">
             <p>Projects</p>
-            <a href="./final_project/index.html">Final Project</a>
-            <a href="./tabbed_content/index.html">Tabbed Content</a>
-            <a href="./time_clock_calendar/index.html">Time Clock Calendar</a>
+            <a href="./final_project/index.html">Final Project -></a>
+            <a href="./tabbed_content/index.html">Tabbed Content -></a>
+            <!-- <a href="./time_clock_calendar/index.html">Time Clock Calendar -></a> -->
+            <a href="./ninja_quiz/index.html">Ninja Quiz -><br>Credit: Net Ninja</a>
+            <a href="./changing_images/index.html">Changing Images -></a>
+            <a href="./dropdown_menu/index.html">Dropdown Menu -></a>
         </div>
     </div>
 </body>
