--- a/SDEV2110/time_clock_calendar/index.html
+++ b/SDEV2110/time_clock_calendar/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@3.3.1/index.min.js"></script>
 </head>
 
 <body>
     <div class="container">
         <a href="../SDEV2110.html">Back</a>
         <div class="clock"></div>
-
+        
         <div class="calendar"></div>
     </div>
-
+    
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
     <script src="main.js"></script>
 </body>
 
