--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -21,7 +21,7 @@
                 make them interactive and dynamic.</p>
         </div>
         <div class="projects">
-            <p>Projects</p>
+            <h3>Projects</h3>
             <a href="./final_project/index.html">Final Project -></a>
             <a href="./tabbed_content/index.html">Tabbed Content -></a>
             <!-- <a href="./time_clock_calendar/index.html">Time Clock Calendar -></a> -->
