--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 <body>
     <div class="container">
         <h1 class="title">Brandon Phillips Portfolio</h1>
-        <div class="edu_container">
+        
+        
+        <div class="section_container">
 
-            <div class="edu_title">Education</div>
+            <div class="section_title">Education</div>
 
-            <div class="course">
+            <div class="section_content">
                 <a href="./SDEV2110/SDEV2110.html">
                     SDEV 2110 JavaScript Programming I
                 </a>
             </div>
         </div>
+
+        <!-- Work in progress... -->
     </div>
     <footer></footer>
 
