--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brandon Phillips Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 
 <body>
     <div class="container">
-        <h1 class="title">Brandon Phillips Portfolio</h1>
+        <h1 class="main_title">Brandon Phillips Portfolio</h1>
         
         
         <div class="section_container">
