--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDEV 2110</title>
-    <link rel="stylesheet" href="SDEV2110.css">
+    <link rel="stylesheet" href="../portfolio.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="title">
+        <div class="page_title">
             <a href="../index.html">Back</a>
             <h1>SDEV 2110 JavaScript Programming I</h1>
         </div>
-        <div class="description">
+        <div class="page_description">
             <p>School: Davis Technical College</p>
             <p>Course Description: This JavaScript course exposes students to the modern JavaScript language and the Document Object Model
                 (DOM) of web pages. During the course, you will create functional web pages incorporating JavaScript to
                 make them interactive and dynamic.</p>
         </div>
-        <div class="projects">
+        <div class="edu_projects">
             <h3>Projects</h3>
             <a href="./final_project/index.html">Final Project -></a>
             <a href="./tabbed_content/index.html">Tabbed Content -></a>
