--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -28,6 +28,9 @@
             <a href="./ninja_quiz/index.html">Ninja Quiz -><br>Credit: Net Ninja</a>
             <a href="./changing_images/index.html">Changing Images -></a>
             <a href="./dropdown_menu/index.html">Dropdown Menu -></a>
+            <a href="./free_advice_app/index.html">Free Advice App -></a>
+            <a href="./movie_app/index.html">Movie App -></a>
+            <a href="./country_info/index.html">Country Info -></a>
         </div>
     </div>
 </body>
