--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -21,16 +21,18 @@
                 make them interactive and dynamic.</p>
         </div>
         <div class="edu_projects">
-            <h3>Projects</h3>
+            <h3>Live Projects</h3>
             <a href="./final_project/index.html">Final Project -></a>
             <a href="./tabbed_content/index.html">Tabbed Content -></a>
-            <!-- <a href="./time_clock_calendar/index.html">Time Clock Calendar -></a> -->
             <a href="./ninja_quiz/index.html">Ninja Quiz -><br>Credit: Net Ninja</a>
             <a href="./changing_images/index.html">Changing Images -></a>
             <a href="./dropdown_menu/index.html">Dropdown Menu -></a>
             <a href="./free_advice_app/index.html">Free Advice App -></a>
-            <a href="./movie_app/index.html">Movie App -></a>
-            <a href="./country_info/index.html">Country Info -></a>
+            
+            <!-- Broken -->
+            <!-- <a href="./time_clock_calendar/index.html">Time Clock Calendar -></a> -->
+            <!-- <a href="./movie_app/index.html">Movie App -></a> -->
+            <!-- <a href="./country_info/index.html">Country Info -></a> -->
         </div>
     </div>
 </body>
