--- a/index.html
+++ b/index.html
@@ -11,15 +11,33 @@
 <body>
     <div class="container">
         <h1 class="main_title">Brandon Phillips Portfolio</h1>
-        
-        
+
+
         <div class="section_container">
 
-            <div class="section_title">Education</div>
+            <div class="section_title">Courses</div>
 
             <div class="section_content">
                 <a href="./SDEV2110/SDEV2110.html">
-                    SDEV 2110 JavaScript Programming I
+                    SDEV 2110 JavaScript Programming I -> !Live Projects!
+                </a>
+                <a href="./SDEV2410/SDEV2410.html">
+                    SDEV 2410 C# Programming I
+                </a>
+                <a href="./SDEV2420/SDEV2420.html">
+                    SDEV 2420 C# Programming II
+                </a>
+                <a href="./SDEV1040/SDEV1040.html">
+                    SDEV 1040 Database Development Fundamentals
+                </a>
+                <a href="./SDEV1060/SDEV1060.html">
+                    SDEV 1060 Unit Testing
+                </a>
+                <a href="./SDEV2611/SDEV2611.html">
+                    SDEV 2611 Web API Fundamentals
+                </a>
+                <a href="./SDEV2730/SDEV2730.html">
+                    SDEV 2730 Mobile Development
                 </a>
             </div>
         </div>
