Add tip calculator

--- a/SDEV2110/SDEV2110.html
+++ b/SDEV2110/SDEV2110.html
@@ -28,6 +28,7 @@
             <a href="./changing_images/index.html">Changing Images -></a>
             <a href="./dropdown_menu/index.html">Dropdown Menu -></a>
             <a href="./free_advice_app/index.html">Free Advice App -></a>
+            <a href="./tip_calculator/index.html">Tip Calculator -></a>
             
             <!-- Broken -->
             <!-- <a href="./time_clock_calendar/index.html">Time Clock Calendar -></a> -->
